--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "Manuel Roque",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
+    "fs-extra": "^11.3.0",
+    "socket.io": "^4.8.1"
   }
 }
